crates/toml/tests/snapshots/invalid/key/partial-quoted.stderr
TOML parse error at line 1, column 8
  |
1 | partial"quoted" = 5
  |        ^
invalid unquoted key, expected letters, numbers, `-`, `_`

---
TOML parse error at line 1, column 15
  |
1 | partial"quoted" = 5
  |               ^
invalid unquoted key, expected letters, numbers, `-`, `_`
